# sway

forc-pkg/src/: pkg.rs
forc-plugins/forc-client/src/cmd/: deploy.rs
forc-plugins/forc-client/src/op/: deploy.rs
forc-plugins/forc-node/: Cargo.toml
forc-plugins/forc-node/src/: cmd.rs  main.rs  pkg.rs  run.rs
forc-plugins/forc-node/src/local/: cmd.rs  op.rs
forc-plugins/forc-node/src/testnet/: cmd.rs  op.rs
sway-core/src/: build_config.rs
sway-core/src/asm_generation/fuel/programs/: abstract.rs
sway-core/src/ir_generation/: compile.rs
sway-core/src/language/ty/expression/: intrinsic_function.rs
sway-core/src/semantic_analysis/ast_node/declaration/: auto_impl.rs  configurable.rs
sway-core/src/semantic_analysis/ast_node/expression/typed_expression/: method_application.rs
sway-ir/src/: printer.rs
test/: Cargo.toml
test/src/e2e_vm_tests/: harness.rs  mod.rs
