[package]
name = "forc-node"
version = "0.63.1"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies] 
anyhow = "1"
clap = { version = "4.5.4", features = ["derive", "env"] }
forc-util = { version = "0.63.1", path = "../../forc-util" }
forc-tracing = { version = "0.63.1", path = "../../forc-tracing" }
fuel-core = "0.34.0"
fuel-core-bin = "0.34.0"
humantime = "2.1.0"
include_dir = "0.7.4"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread", "process"] }
